test/implicitDup21_5.slq
def foo(x:ğ”¹){
	z:=dup(x); /// error
	if X(z){ /// error
		t:=z; /// error
		r:=H(x);
		forget(z); /// error
	}else{
		r:=x;
	}
	return r;
}

